kubernetes/backups/n8n/n8n/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: worker
    app.kubernetes.io/instance: n8n
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: n8n-worker
    app.kubernetes.io/part-of: n8n
    app.kubernetes.io/version: 2.11.4
    helm.sh/chart: n8n-1.16.31
  name: n8n-worker
  namespace: n8n
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/component: worker
      app.kubernetes.io/instance: n8n
      app.kubernetes.io/name: n8n-worker
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/config: ba6ae0afb7c6c5258480ccc547c812e0bbf2b36213cbcff248dedbdaaf2867f4
      labels:
        app.kubernetes.io/component: worker
        app.kubernetes.io/instance: n8n
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: n8n-worker
        app.kubernetes.io/part-of: n8n
        app.kubernetes.io/version: 2.11.4
        helm.sh/chart: n8n-1.16.31
    spec:
      containers:
        - args:
            - worker
            - --concurrency=10
          command:
            - n8n
          image: n8nio/n8n:2.12.3
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          name: n8n-worker
          ports:
            - containerPort: 5678
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /healthz/readiness
              port: http
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
          startupProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - ps aux | grep '[n]8n'
            failureThreshold: 30
            initialDelaySeconds: 10
            periodSeconds: 5
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      serviceAccountName: n8n
