kubernetes/backups/n8n/n8n/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: n8n
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: n8n-webhook
    app.kubernetes.io/part-of: n8n
  name: n8n-webhook
  namespace: n8n
spec:
  ports:
    - name: http
      port: 5678
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/component: webhook
    app.kubernetes.io/instance: n8n
    app.kubernetes.io/name: n8n-webhook
  type: ClusterIP
