kubernetes/backups/n8n/n8n/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: n8n
    app.kubernetes.io/name: n8n
    app.kubernetes.io/part-of: n8n
  name: n8n
  namespace: n8n
spec:
  ingressClassName: cilium
  rules:
    - host: n8n.mcmumf.dev
      http:
        paths:
          - backend:
              service:
                name: n8n
                port:
                  number: 5678
            path: /
            pathType: Prefix
